feat(swapper): add support for regex placeholders with {matched} replacement